--- a/index.html
+++ b/index.html
@@ -5,180 +5,200 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dinamik Management - Privacy Policy</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif;
             line-height: 1.6;
             color: #333;
-            background-color: #f5f5f7;
-            padding: 20px;
-        }
-
-        .container {
-            max-width: 800px;
+            max-width: 900px;
             margin: 0 auto;
-            background: white;
+            padding: 20px;
+            background-color: #f5f5f5;
+        }
+        .container {
+            background-color: white;
             padding: 40px;
-            border-radius: 12px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
-
         h1 {
-            font-size: 2.5em;
-            color: #1d1d1f;
-            margin-bottom: 10px;
-            font-weight: 600;
+            color: #1a1a1a;
+            border-bottom: 3px solid #007AFF;
+            padding-bottom: 10px;
         }
-
-        .last-updated {
-            color: #86868b;
-            font-size: 0.95em;
-            margin-bottom: 30px;
-            font-style: italic;
-        }
-
-        .intro {
-            background: #f5f5f7;
-            padding: 20px;
-            border-radius: 8px;
-            margin-bottom: 30px;
-            border-left: 4px solid #007aff;
-        }
-
         h2 {
-            font-size: 1.5em;
-            color: #1d1d1f;
+            color: #1a1a1a;
             margin-top: 30px;
-            margin-bottom: 15px;
+            border-bottom: 1px solid #e1e4e8;
+            padding-bottom: 8px;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 20px 0;
+            background-color: white;
+        }
+        th, td {
+            border: 1px solid #ddd;
+            padding: 12px;
+            text-align: left;
+        }
+        th {
+            background-color: #007AFF;
+            color: white;
             font-weight: 600;
         }
-
-        p {
-            margin-bottom: 15px;
-            color: #515154;
+        tr:nth-child(even) {
+            background-color: #f9f9f9;
         }
-
         ul {
-            margin-left: 20px;
-            margin-bottom: 15px;
+            padding-left: 20px;
         }
-
         li {
-            margin-bottom: 10px;
-            color: #515154;
+            margin-bottom: 8px;
         }
-
-        strong {
-            color: #1d1d1f;
-            font-weight: 600;
+        code {
+            background-color: #f6f8fa;
+            padding: 2px 6px;
+            border-radius: 3px;
+            font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, monospace;
         }
-
-        .contact {
-            background: #007aff;
-            color: white;
+        .contact-info {
+            background-color: #f6f8fa;
             padding: 20px;
-            border-radius: 8px;
-            margin-top: 30px;
-            text-align: center;
+            border-radius: 6px;
+            border-left: 4px solid #007AFF;
+            margin: 20px 0;
         }
-
-        .contact a {
-            color: white;
-            text-decoration: underline;
-            font-weight: 500;
+        .last-updated {
+            font-style: italic;
+            color: #666;
         }
-
-        .footer {
+        footer {
             text-align: center;
             margin-top: 40px;
             padding-top: 20px;
-            border-top: 1px solid #d2d2d7;
-            color: #86868b;
-            font-size: 0.9em;
-        }
-
-        @media (max-width: 768px) {
-            .container {
-                padding: 20px;
-            }
-
-            h1 {
-                font-size: 2em;
-            }
-
-            h2 {
-                font-size: 1.3em;
-            }
+            border-top: 1px solid #e1e4e8;
+            color: #666;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Dinamik Management Privacy Policy</h1>
-        <p class="last-updated">Last updated: October 8, 2025</p>
+        <h1>Dinamik Management App Privacy Policy</h1>
+        
+        <p class="last-updated"><em>Last updated: November 13, 2025</em></p>
 
-        <div class="intro">
-            <p><strong>Dinamik Management</strong> ("the App") is a personal property-management tool maintained by Kimani James. This policy explains what data is collected, how it is used, and the choices available to you. The App is distributed via the Apple App Store for use on iOS devices.</p>
+        <h2>Overview</h2>
+        <p>Dinamik Management ("the App") helps landlords and property managers organize property information, tenant records, finances, and maintenance workflows. We designed the App to keep your data under your control. This privacy policy explains what information the App accesses, how that information is stored, and the limited circumstances in which it might be shared.</p>
+
+        <h2>Data Ownership and Control</h2>
+        <ul>
+            <li><strong>You own your data.</strong> All property, tenant, financial, maintenance, and document information you enter into the App belongs to you.</li>
+            <li><strong>Local-first storage.</strong> By default, all data stays on your device using Apple's SwiftData framework. We do not collect or upload your information to our servers.</li>
+            <li><strong>Optional sync.</strong> If you enable iCloud sync in the App's settings, your information is stored in your personal iCloud account, protected by Apple's encryption and security controls.</li>
+            <li><strong>No third-party analytics.</strong> The App does not integrate with advertising networks, analytics SDKs, or external data brokers.</li>
+        </ul>
+
+        <h2>Information the App Processes</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Category</th>
+                    <th>Examples</th>
+                    <th>Storage</th>
+                    <th>Notes</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Property information</td>
+                    <td>Addresses, purchase details, utilities, rooms, photos</td>
+                    <td>Local device (SwiftData) or iCloud</td>
+                    <td>Photos remain in your device photo library unless explicitly imported</td>
+                </tr>
+                <tr>
+                    <td>Tenant & lease details</td>
+                    <td>Names, contact info, lease terms, rent schedules</td>
+                    <td>Local device or iCloud</td>
+                    <td>Communication shortcuts use your native Phone, Messages, and Mail apps</td>
+                </tr>
+                <tr>
+                    <td>Financial records</td>
+                    <td>Rent payments, expenses, reports</td>
+                    <td>Local device or iCloud</td>
+                    <td>You control when payments are marked paid/overdue</td>
+                </tr>
+                <tr>
+                    <td>Maintenance & issues</td>
+                    <td>Tasks, complaints, future work, scheduling</td>
+                    <td>Local device or iCloud</td>
+                    <td>Optional calendar integration uses Apple's EventKit</td>
+                </tr>
+                <tr>
+                    <td>Documents</td>
+                    <td>Files linked to properties or tenants</td>
+                    <td>Local device or iCloud</td>
+                    <td>Documents are stored in-app and never shared externally</td>
+                </tr>
+                <tr>
+                    <td>Settings & preferences</td>
+                    <td>Authentication, masking, auto-lock, sync preferences</td>
+                    <td>Local device</td>
+                    <td>Biometric authentication data never leaves your device</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <h2>Device Permissions</h2>
+        <p>The App may request the following permissions:</p>
+        <ul>
+            <li><strong>Face ID / Touch ID / Optic ID:</strong> Used only to gate access to sensitive data when you enable "Require Authentication for Sensitive Data."</li>
+            <li><strong>Contacts, Phone, and Messages:</strong> Only used when you initiate a call, SMS, or email from within the App. We do not access or store your contact list.</li>
+            <li><strong>Calendars:</strong> Optional integration to add showings and maintenance events to your personal calendar. Calendar entries stay in your iCloud or local calendar account.</li>
+            <li><strong>Photos:</strong> Used when you attach photos to rooms, items, maintenance tasks, or documents. Selected photos remain in the App's database on your device or iCloud.</li>
+        </ul>
+
+        <h2>Security Controls</h2>
+        <ul>
+            <li><strong>Biometric protection:</strong> Enable authentication in Privacy Settings to require Face ID, Touch ID, or Optic ID before viewing sensitive details.</li>
+            <li><strong>Masked data:</strong> Turn on masking for financial and tenant contact information so details stay hidden until authenticated.</li>
+            <li><strong>Auto-lock options:</strong> Configure how quickly the App locks when inactive or when it moves to the background.</li>
+            <li><strong>Lifecycle services:</strong> Background schedulers (for payments, bookings, lawn care) respect your preferences and never transmit data off-device.</li>
+        </ul>
+
+        <h2>Data Sharing</h2>
+        <p>We do not share your data with third parties. The only times data may leave your device are:</p>
+        <ol>
+            <li><strong>iCloud Sync:</strong> When you opt in, Apple securely syncs your App data across your devices. Review Apple's privacy documentation for details.</li>
+            <li><strong>Exports or sharing initiated by you:</strong> When you email support, export a report, or share a document, the data you include is sent to your chosen destination.</li>
+            <li><strong>System backups:</strong> Your data may be included in encrypted device backups managed by Apple.</li>
+        </ol>
+
+        <h2>Children's Privacy</h2>
+        <p>Dinamik Management is intended for property owners, managers, and business operators. It is not directed toward children under 13, and we do not knowingly collect information from children.</p>
+
+        <h2>Your Choices</h2>
+        <ul>
+            <li><strong>Manage sync:</strong> Enable or disable iCloud sync at any time in Settings → General.</li>
+            <li><strong>Control authentication:</strong> Configure biometric requirements, auto-lock delay, and masking in Settings → Privacy.</li>
+            <li><strong>Delete data:</strong> You can remove individual records in the App. To delete all data, remove the App from your device. If iCloud sync was enabled, delete the associated data from iCloud Drive via Apple settings.</li>
+            <li><strong>Update permissions:</strong> Use iOS Settings → Privacy to change camera, calendar, contacts, or biometric permissions for the App.</li>
+        </ul>
+
+        <h2>Updates to This Policy</h2>
+        <p>We may update this privacy policy as we enhance the App. Material changes will be communicated in-app and via release notes. Continued use of the App after changes take effect constitutes acceptance of the updated policy.</p>
+
+        <h2>Contact Us</h2>
+        <p>For privacy questions or requests, contact:</p>
+        
+        <div class="contact-info">
+            <p><strong>Email:</strong> <a href="mailto:dinamikmanagement@iriedinamik.org">dinamikmanagement@iriedinamik.org</a></p>
+            <p><strong>Company:</strong> Irie Dinamik LLC</p>
         </div>
 
-        <h2>1. Information We Collect</h2>
-        <ul>
-            <li><strong>Account & Sync Data:</strong> The App uses your Apple ID with iCloud to sync data across your devices. We store app-specific identifiers necessary for synchronization.</li>
-            <li><strong>Property & Tenant Records:</strong> You may enter names, contact information, lease details, rent amounts, utilities, documents, photos, and notes to manage your properties. This data remains in your private iCloud container (<code>iCloud.com.kimanijames.DinamikManagement</code>).</li>
-            <li><strong>Location Data:</strong> If you enable location-based reminders, the App accesses your location to trigger geofenced alerts. Location usage is optional and can be disabled at any time in iOS Settings.</li>
-            <li><strong>Camera & Photo Library:</strong> When you choose to capture or import ID documents or property photos, the App requests access to your camera or photo library.</li>
-            <li><strong>Calendar & Contacts:</strong> If you opt in, the App may write events to your calendar or create contact cards for tenants. These integrations are optional and controlled through system prompts.</li>
-        </ul>
-
-        <h2>2. How We Use Information</h2>
-        <ul>
-            <li>Provide core property-management functionality (records, reminders, scheduling, payments tracking).</li>
-            <li>Sync your data securely across your devices via iCloud.</li>
-            <li>Send local and push notifications for reminders you configure (rent due, maintenance tasks, showings).</li>
-            <li>Generate reports and financial summaries for your personal bookkeeping.</li>
-        </ul>
-        <p>We do <strong>not</strong> sell your data, show ads, or share your information with third parties.</p>
-
-        <h2>3. Data Storage & Security</h2>
-        <ul>
-            <li>All user data is stored locally on your devices and in your private iCloud container. Only you (through your Apple ID) can access this data.</li>
-            <li>The developer does not maintain separate servers; Apple's iCloud security controls and your device security (Face ID, Touch ID, passcode) protect your information.</li>
-        </ul>
-
-        <h2>4. Notifications & Background Activity</h2>
-        <ul>
-            <li>Notifications are used solely to deliver reminders you schedule.</li>
-            <li>Background location updates are used only to power geofenced reminders (e.g., property visit checklists).</li>
-            <li>You can manage notification and location permissions anytime in iOS Settings > Privacy & Security.</li>
-        </ul>
-
-        <h2>5. Your Choices</h2>
-        <ul>
-            <li><strong>Opt Out of Location:</strong> Disable location permissions to stop geofenced reminders.</li>
-            <li><strong>Notification Preferences:</strong> Adjust notification settings per property, disable specific reminder categories, or revoke notification permission entirely.</li>
-            <li><strong>Data Editing & Deletion:</strong> You can update or delete any property, tenant, document, or payment record within the App. Removing the App or disabling iCloud Drive will delete your synced data.</li>
-        </ul>
-
-        <h2>6. Children's Privacy</h2>
-        <p>The App is intended for property owners and managers. It is not directed to children under 13, and we do not knowingly collect information from children.</p>
-
-        <h2>7. Changes to This Policy</h2>
-        <p>We may update this policy when new features require additional disclosures. The "Last updated" date will change, and release notes will summarize material updates.</p>
-
-        <h2>8. Contact</h2>
-        <div class="contact">
-            <p>For questions or privacy requests, contact: <a href="mailto:privacy@dinamik.app">privacy@dinamik.app</a></p>
-        </div>
-
-        <div class="footer">
-            <p>&copy; 2025 Kimani James. All rights reserved.</p>
-            <p>Dinamik Management is an independent app and is not affiliated with Apple Inc.</p>
-        </div>
+        <footer>
+            <p>&copy; 2025 Irie Dinamik LLC. All rights reserved.</p>
+        </footer>
     </div>
 </body>
 </html>
