Revise support page content and update last updated date
Updated last updated date and enhanced property management and maintenance sections with additional details.

--- a/support.html
+++ b/support.html
@@ -89,7 +89,7 @@
     <div class="container">
         <h1>Dinamik Management Support Center</h1>
         
-        <p class="last-updated"><em>Last updated: November 13, 2025</em></p>
+        <p class="last-updated"><em>Last updated: November 24, 2025</em></p>
 
         <p>Welcome to the Dinamik Management support center. This page mirrors the in-app Help & Support experience so you can quickly find answers, guides, and direct contact information.</p>
 
@@ -117,14 +117,14 @@
         <p>Comprehensive answers covering:</p>
         <ol>
             <li><strong>Getting Started</strong> – Secure data storage, iCloud sync, using the app on multiple devices</li>
-            <li><strong>Property Management</strong> – Adding properties, tracking rooms and items, configuring lawn care and waste collection</li>
+            <li><strong>Property Management</strong> – Adding properties, tracking rooms and items, configuring lawn care, waste collection, and property weather settings</li>
             <li><strong>Tenant & Lease Management</strong> – Creating tenants, automatic rent generation, tenant communications, complaint tracking</li>
             <li><strong>Financial Management</strong> – Recording payments, overdue handling, expense categories, financial reports, dashboard financial rings</li>
-            <li><strong>Maintenance & Operations</strong> – Unified Issues & Tasks workflow, maintenance requests, lawn care automation, future work planning</li>
+            <li><strong>Maintenance & Operations</strong> – Unified Issues & Tasks workflow, maintenance requests, lawn care automation, weather alerts & rescheduling, future work planning</li>
             <li><strong>Showings & Bookings</strong> – Scheduling showings, quick actions, short-term bookings, converting prospects to tenants</li>
             <li><strong>Documents & Organization</strong> – Document storage, dashboard reordering, Past Due summary overview</li>
             <li><strong>Privacy & Settings</strong> – Biometric authentication, data masking, iCloud sync, accessing Terms & Privacy policies</li>
-            <li><strong>Troubleshooting</strong> – Payment generation, lawn care scheduling, data sync, email setup</li>
+            <li><strong>Troubleshooting</strong> – Payment generation, lawn care scheduling, weather alerts, data sync, email setup</li>
         </ol>
 
         <p>You can access the full FAQ inside the app via <strong>Settings → Help & Support → Frequently Asked Questions</strong>.</p>
@@ -136,6 +136,7 @@
             <li>Lease tracking and communication shortcuts</li>
             <li>Payment tracking, expense categorization, and financial reporting</li>
             <li>Lawn care automation, issue prioritization, and photo documentation</li>
+            <li>Weather alerts, Weather Settings, and rescheduling tasks around weather</li>
             <li>Document storage, calendar integration, iCloud sync</li>
             <li>Batch overdue operations, future work planning, privacy and security configurations</li>
         </ul>
